force-app/main/default/objects/Account/fields/Approved_Status__c.field-meta.xml
<CustomField>
    <fullName>Approved_Status__c</fullName>
    <label>Approved Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>lock</fullName>
            </value>
            <value>
                <fullName>unlock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>