force-app/main/default/objects/Account/fields/Days_Since_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Update__c</fullName>
    <formula>DAY(Last_Activity_Date__c) - DAY(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>