force-app/main/default/objects/Account/fields/MailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>MailingPostalCode__c</fullName>
    <label>MailingPostalCode</label>
    <length>32</length>
    <type>Text</type>
</CustomField>