force-app/main/default/objects/Account/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>true</active>
    <errorConditionFormula>MailingPostalCode__c &lt;&gt;  ShippingPostalCode__c</errorConditionFormula>
    <errorDisplayField>MailingPostalCode__c</errorDisplayField>
    <errorMessage>you are wrong</errorMessage>
</ValidationRule>