force-app/main/default/objects/Account/listViews/Channel_Customers1.listView-meta.xml
<ListView>
    <fullName>Channel_Customers1</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Aclima</value>
    </filters>
    <label>Channel Customers1</label>
</ListView>